<resources>
    <string name="app_name">TechChallenge</string>

    <string name="activity_login_username">Kullanıcı Adı</string>
    <string name="activity_login_password">Şifre</string>
    <string name="activity_login_remember_me">Beni Hatırla</string>
    <string name="activity_login_submit">GİRİŞ</string>

    <string name="activity_order_activity_title">MARKETİM</string>
    <string name="activity_order_my_orders">Siparişlerim</string>
    <string name="activity_order_logout">Çıkış Yap</string>

    <string name="validate_wrong_username_password">Kullanıcı adı veya parola hatalı</string>
    <string name="validate_empty_username_password">Kullanıcı adı veya parola boş bırakılamaz</string>

    <string name="listview_row_order_product_price">%1$.2f TL</string>

    <string name="dialog_logout_question">Çıkmak istediğine emin misin?</string>
    <string name="dialog_logout_submit">Çıkış Yap</string>
    <string name="dialog_logout_cancel">Vazgeç</string>

</resources>
