<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="918px"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_question"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/dialog_logout_question"
        android:textColor="@android:color/black"
        android:textSize="49px"
        android:textStyle="bold"
        app:layout_constraintDimensionRatio="4:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.90" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="5:1"
        app:layout_constraintTop_toBottomOf="@id/tv_question">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/background_stroke_with_radius"
            android:gravity="center"
            android:hapticFeedbackEnabled="true"
            android:text="@string/dialog_logout_cancel"
            android:textColor="@color/colorPrimary"
            android:textSize="49px"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_submit"
            app:layout_constraintHeight_percent="0.60"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.40" />

        <TextView
            android:id="@+id/tv_submit"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/background_solid_with_radius"
            android:gravity="center"
            android:hapticFeedbackEnabled="true"
            android:text="@string/dialog_logout_submit"
            android:textColor="@android:color/white"
            android:textSize="49px"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.60"
            app:layout_constraintStart_toEndOf="@id/tv_cancel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.40" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>